* Fixed one bug related to the deleting posts action: points for replies wouldn't be counted properly some times
* Added 'numeric' field type to settings.
* Fixed a few other bugs.
* Settings can now be translated on the front-end (see language file)

From version 1.9.9 to 2.0:
* Compatible with MyBB 1.8.
* Fixed bug in the points format, related to thousands and decimals separators.
* Characters within quote tags are not counted anymore.
* Guest posts / Deleted users' posts showed points in the user details section when in fact they don't have any possible points.

From version 1.9.8 to 1.9.9:
* Fixed major bug in the newpoints_addpoints function which would cause malfunction if it was executed more than once per page.

From version 1.9.7 to 1.9.8:
* Plugins can now use the hook newpoints_xmlhttp.
* Forum Rules did not affect quick reply posting.
* Donation number_format warning on some PHP installations.
* Fixed 'newpoints_statistics' template problem.

From version 1.9.6 to 1.9.7:
* Fixed a high risk vulnerability (SQL injection).
* Fixed a bug in the newpoints_addpoints function which wouldn't add/remove points from a user if points had been added/removed in the same page already.

From version 1.9.5 to 1.9.6:
* Settings are now re-cached when installing/uninstalling/activating/deactivating NewPoints plugins.
* Group rules now affected points per visit and points for referral.

From version 1.9.4 to 1.9.5:
* Fixes minor bugs.
* Fixed an SQL error which appeared on the ACP.
* Settings are cached which reduces one query per page.
* Forum Rules and Group Rules are cached resulting in a performance increase.

From version 1.9.3 to 1.9.4:
* Fixed an incompatibility issue with MyBB 1.6.6.

From version 1.9.2 to 1.9.3:
* Fixed bug in the recounting process (related to the income rules).

From version 1.9.1 to 1.9.2:
* Fixed SQL error in Plugins List and Plugins Updates Check pages.

From version 1.9 to 1.9.1: