@@ -1,124 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- start: index -->
-<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
-<title>Converters - NewPoints</title>
-<!-- start: headerinclude -->
-<link href="Readme_files/css.css" rel="stylesheet" type="text/css">
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Content-Script-Type" content="text/javascript">
-<link type="text/css" rel="stylesheet" href="Readme_files/custom.css">
-<link type="text/css" rel="stylesheet" href="Readme_files/global.css">
-<link type="text/css" rel="stylesheet" href="Readme_files/css3.css">
-</head>
-<body>
-<!-- start: header -->
-<a name="top" id="top"></a>
-<div id="userbar">
-	<div class="wrapper">
-      	<div class="toplinks">
-        	<ul>
-				<li id="myplaza"><a href="#myplaza">MyPlaza Turbo to NewPoints</a></li>
-				<li id="myps"><a href="#myps">MyPS to NewPoints</a></li>
-          	</ul>
-      	</div>
-  	</div>
-</div>
-<div class="header">
-    <div class="logo">
-        <div class="wrapper">
-            <a href="http://mybb-plugins.com"><img src="Readme_files/logo.png" alt="Forums" title="Forums"></a>
-          	<br class="clear">
-        </div>
-    </div>
-</div>
-<br />
-<div id="container">
-	<div id="content">
-		<div class="wrapper">
-			<table class="tborder" cellpadding="5" cellspacing="0" border="0">
-				<thead>
-				<tr>
-				<td class="thead">
-				<div><strong><a name="description">Description</a></strong><br /><div class="smalltext"></div></div>
-				</td>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td class="trow2">
-						<p><strong>Description</strong></p>
-						<p>NewPoints comes with two converters, one to convert MyPlaza Turbo data to NewPoints data and one to convert MyPS data to NewPoints data.</p>
-						<p>Data converted from MyPlaza Turbo: points, forum income rate to forum rules and user group income rate to user group rules.</p>
-						<p>Data converted from MyPS: points, exempt forums to forum rules and exempt groups to user group rules.</p>
-					</td>
-				</tr>
-				</tbody>
-			</table>
-			<br />
-			<table class="tborder" cellpadding="5" cellspacing="0" border="0">
-				<thead>
-				<tr>
-				<td class="thead">
-				<div><strong><a name="myplaza">MyPS to NewPoints</a></strong><br /><div class="smalltext"></div></div>
-				</td>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td class="trow2">
-						<p>
-							<ul>
-							  <li>MAKE SURE YOU HAVE A WORKING NewPoints INSTALLATION FIRST.</li>
-							  <li>MAKE SURE MYPS IS INSTALLED AND ACTIVATED.</li>
-							  <li>Upload the file converters/converter2.php to the root of your MyBB installation and run it.</li>
-							  <li>Follow the on-screen instructions.</li>
-							  <li>Delete the file from your server once the data has been converted.</li>
-							  <li>Uninstall MyPS.</li>
-							  <li>Done!</li>
-							</ul>
-						</p>
-					</td>
-				</tr>
-				</tbody>
-			</table>
-			<br />
-			<table class="tborder" cellpadding="5" cellspacing="0" border="0">
-				<thead>
-				<tr>
-				<td class="thead">
-				<div><strong><a name="myplaza">MyPlaza Turbo to NewPoints</a></strong><br /><div class="smalltext"></div></div>
-				</td>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td class="trow2">
-						<p>
-							<ul>
-							  <li>MAKE SURE YOU HAVE A WORKING NewPoints INSTALLATION FIRST</li>
-							  <li>MAKE SURE MYPLAZA TURBO IS INSTALLED AND ACTIVATED</li>
-							  <li>Upload the file converters/converter1.php to the root of your MyBB installation and run it.</li>
-							  <li> Follow the on screen instructions.</li>
-							  <li>Delete the file from your server once the data has been converted.</li>
-							  <li>Uninstall MyPlaza Turbo.</li>
-							  <li>Done!</li>
-							</ul>
-						</p>
-					</td>
-				</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
-<br />
-<div id="footer">
-	<div class="wrapper">
-    	<div class="copyright">
-          	Copyright © 2014 <a href="http://mybb-plugins.com">MyBB-Plugins.com</a>, Pirata Nervo<br />
-          	All rights reserved.<br />
-      	</div>
-      	<br class="clear">
-  	</div>
-</div>
-</body></html>
